[package]
name = "internxt"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Unofficial Rust port of the Internxt CLI"
repository = "https://github.com/Bebbssos/internxt-cli-rust"

[[bin]]
name = "internxt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
dirs = "5"
rpassword = "7"
futures-util = "0.3"
bytes = "1"
chrono = "0.4"

# crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha1 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
md-5 = "0.10"
hmac = "0.12"
cipher = "0.4"
bip39 = "2"

[profile.release]
opt-level = 3
lto = true
