[package]
name = "internxt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Unofficial Rust port of the Internxt CLI"
repository = "https://github.com/Bebbssos/internxt-cli-rust"

[[bin]]
name = "internxt"
path = "src/main.rs"

[features]
default = ["sso", "webdav", "fuse"]
# Web-based (universal-link) SSO login. Pulls in axum (local callback server)
# and open (browser launcher). Disable to build a smaller binary with only the
# legacy email/password login.
sso = ["dep:axum", "dep:open"]
# WebDAV server mode (`internxt webdav`). Serves Drive over WebDAV via axum.
# Plain HTTP by default; enable `webdav-tls` for HTTPS (self-signed / custom cert).
webdav = ["dep:axum", "dep:tokio-util", "dep:mime_guess"]
# HTTPS for the WebDAV server. Pulls in rustls + a self-signed cert generator.
# Kept separate because the TLS stack is a sizeable extra dependency.
webdav-tls = ["webdav", "dep:axum-server", "dep:rustls-pemfile", "dep:rcgen"]
# FUSE mount mode (`internxt mount`). Mounts your Drive as a local filesystem on
# Unix (Linux / macOS / FreeBSD). `fuser` links libfuse via pkg-config, so a build
# needs libfuse3-dev + pkg-config (macFUSE on macOS, fusefs-libs3 on FreeBSD) and a
# FUSE driver at runtime. Declared for `cfg(unix)` only: on Windows the feature is
# inert (all `mount` code is gated `#[cfg(all(unix, feature = "fuse"))]`).
fuse = ["dep:fuser", "dep:libc", "dep:tokio-util"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
hex = "0.4"
base64 = "0.22"
base32 = "0.5"
rand = "0.10"
dirs = "6"
rpassword = "7"
futures-util = "0.3"
bytes = "1"
chrono = "0.4"
indicatif = "0.18"

# sso (web-based login) + webdav: local HTTP server via axum
axum = { version = "0.8", optional = true }
open = { version = "5", optional = true }

# webdav: stream <-> AsyncRead adapters + MIME lookup for PROPFIND
tokio-util = { version = "0.7", features = ["io"], optional = true }
mime_guess = { version = "2", optional = true }

# webdav-tls: HTTPS listener + cert loading/generation
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls-pemfile = { version = "2", optional = true }
rcgen = { version = "0.13", optional = true }

# crypto
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
ctr = "0.10"
aes-gcm = "0.10"
pbkdf2 = "0.13"
sha1 = "0.11"
sha2 = "0.11"
ripemd = "0.2"
md-5 = "0.11"
hmac = "0.13"
cipher = "0.5"
bip39 = "2"
pgp = "0.19"
safe_pqc_kyber = { version = "0.6", default-features = false, features = ["kyber512", "std"] }
blake3 = "1"
filetime = "0.2.29"

[profile.release]
opt-level = 3
lto = true

[target."cfg(unix)".dependencies]
fuser = { version = "0.17.0", optional = true }
libc = { version = "0.2.186", optional = true }
