[package]
name = "internxt-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
description = "Unofficial Rust port of the Internxt CLI"
repository = "https://github.com/Bebbssos/internxt-cli-rust"

[[bin]]
name = "internxt"
path = "src/main.rs"

[features]
default = ["sso", "webdav", "fuse"]
# Web-based (universal-link) SSO login. The flow lives in internxt-core (portable);
# this adds the native transport — a local axum callback server — plus `open` for
# the browser launcher. Disable to build a smaller binary with only legacy login.
sso = ["dep:axum", "dep:open"]
# WebDAV server mode (`internxt serve webdav`). Plain HTTP by default; enable
# `webdav-tls` for HTTPS (self-signed / custom cert).
webdav = ["dep:axum", "dep:tokio-util", "dep:mime_guess"]
# HTTPS for the WebDAV server. Kept separate because the TLS stack is sizeable.
webdav-tls = ["webdav", "dep:axum-server", "dep:rustls-pemfile", "dep:rcgen"]
# FUSE mount mode (`internxt mount`, `internxt serve fuse`). Unix only; `fuser`
# links libfuse via pkg-config. Declared for `cfg(unix)` only (inert on Windows).
fuse = ["dep:fuser", "dep:libc", "dep:tokio-util"]

[dependencies]
internxt-core = { path = "../internxt-core" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
hex = "0.4"
base64 = "0.22"
dirs = "6"
rand = "0.10"
rpassword = "7"
futures-util = "0.3"
bytes = "1"
chrono = "0.4"
indicatif = "0.18"
filetime = "0.2.29"

# sso: browser launcher + the local axum callback server (the flow logic lives in internxt-core)
open = { version = "5", optional = true }

# webdav: axum server + stream <-> AsyncRead adapters + MIME lookup
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
mime_guess = { version = "2", optional = true }

# webdav-tls: HTTPS listener + cert loading/generation
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls-pemfile = { version = "2", optional = true }
rcgen = { version = "0.13", optional = true }

[target."cfg(unix)".dependencies]
fuser = { version = "0.17.0", optional = true }
libc = { version = "0.2.186", optional = true }
